# FuturesQuant

./: .env.example  .gitignore  USAGE.md  USAGE_ml.md  pyproject.toml
.claude/: settings.local.json
futuresquant/backtest/: __init__.py  account.py  analyzer.py  contract.py  engine.py  order.py  report.py
futuresquant/config/: settings.py
futuresquant/data/: loader.py  storage.py  universe.py
futuresquant/execution/: broker.py  risk.py  runner.py
futuresquant/factors/: __init__.py  base.py  engine.py  signal.py
futuresquant/factors/technical/: __init__.py  futures_structure.py  momentum.py  trend.py  volatility.py  volume.py
futuresquant/optimize/: __init__.py  genetic.py  grid_search.py  walk_forward.py
futuresquant/strategy/: base.py
futuresquant/strategy/examples/: __init__.py  atr_breakout.py  bollinger_band.py  ma_cross.py  ml_strategy.py  multi_factor.py  rsi_mean_reversion.py
ml/: backtest.py  config.yaml  evaluate.py  features.py  labels.py  predict.py  resample.py  select_features.py  selected_features_15min_1.yaml  selected_features_5min_forward_15.yaml  selected_features_5min_forward_5.yaml  selected_features_5min_forward_8.yaml  train.py
research/: 01_data_exploration.ipynb  02_factor_analysis.ipynb  03_backtest_analysis.ipynb  04_multi_factor.ipynb  05_optimization.ipynb  06_ml_factor_analysis.ipynb  07_ml_backtest.ipynb  factor_guide.md
tests/: test_backtest.py  test_data_loader.py  test_execution.py  test_factors.py  test_optimize.py  test_strategies.py
