[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "futuresquant"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "tqsdk>=3.6",
    "pandas>=2.0",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "pydantic-settings>=2.0",
    "plotly>=5.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "ruff",
    "jupyter",
    "ipykernel",
]
ml = [
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "joblib>=1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["futuresquant*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["live: requires real TQ credentials (deselect with -m 'not live')"]
